--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="container">
+  <header>
     <h1>Welcome to Katik </h1>
+  </header>
+  <div class="container">
     <p> Hai Sobat, Selamat datang di Katik :]</p>
     <p> Sebuah web apps sederhana yang berfungsi untuk menghitung nilai luas dan keliling bangun datar</p>
     <div class="triangle-image">
@@ -45,7 +47,7 @@
           </tr>
         </table>
       </div>
-      <button type="submit" class="btn btn-primary">Hitung</button>
+      <button type="submit" id="submit" class="btn btn-primary">Submit</button>
       <button type="reset" id="reset" class="btn btn-secondary">Reset</button>
     </form> 
     <div class="hasil">
